# NurtureSubmission

./: .gitignore  README.md  exact-training-requirements.conda.yaml  nurture-metadata.csv  nurture-test-slides.csv  pyproject.toml  requirements.conda.yaml
scripts/: create_kpmp_masks.py  cycle_gan_visuals.py  extract_hubmap_patches.py  extract_kpmp_patches.py  extract_neptune_patches.py  imitation_game.py  infer_virtual_stain.py  plot_validition_img_figure.py  preproc_neptune_patches.py  preproc_qupath_exported_test_patches.py  test_results_hist.py  test_segmentation_model.py  train_segmentation_model.py  train_virtual_stain.py  virtual_stain_figure.py
src/nurture_stain/: __init__.py  _nurture_misc.py  cycle_gan_functional.py  cycle_gan_training.py  cycle_gan_utils.py  dataset.py  hubmap_misc.py  kpmp_misc.py  labels.py  metadata_utils.py  models.py  patch_extraction_utils.py  plotting.py  segmentation_training_utils.py  transforms.py
tests/: test_labels.py  test_patch_extraction_utils.py  test_segmentation_training_utils.py
